--- a/urbanflame-react/index.html
+++ b/urbanflame-react/index.html
@@ -9,6 +9,10 @@
     name="description"
     content="Professional kitchen chimney repair, installation and cleaning services in Delhi NCR, Ghaziabad, Greater Noida & UP."
   />
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  />
 
   <!-- Local Business Schema -->
   <script type="application/ld+json">
