--- a/urbanflame-react/index.html
+++ b/urbanflame-react/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Priya Chimney Repair in Delhi | Ghaziabad | Greater Noida</title>
+  <title>Priya Chimney Repair in  Greater Noida | Noida | Ghaziabad | Delhi</title>
   <meta
     name="description"
-    content="Professional kitchen chimney repair, installation and cleaning services in Delhi NCR, Ghaziabad, Greater Noida & UP."
+    content="Professional kitchen chimney repair, installation and cleaning services in Greater Noida, Noida, Delhi, Ghaziabad"
   />
   <link
   rel="stylesheet"
@@ -20,11 +20,11 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Priya Chimney",
-      "areaServed": ["Delhi","Ghaziabad","Greater Noida","Noida","UP"],
+      "areaServed": ["Delhi","Ghaziabad","Greater Noida","Noida"],
       "telephone": "+917417210241",
       "address": {
         "@type": "PostalAddress",
-        "addressRegion": "Delhi NCR",
+        "addressRegion": "Shop No.B4, krishna market bihari market, Sector 1, Bisrakh Jalalpur, Noida, Bisrakh Jalalpur, Uttar Pradesh 201318",
         "addressCountry": "IN"
       }
     }
